--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
-Hi this is Paras.
+<!DOCTYPE html> <!-- The new doctype -->
+<html>
+    <head>
+
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+        <title>India</title>
+        <link rel="icon" type="image/ico" href="images/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
+
+    </head>
+
+    <body background="back1.jpg">
+
+    	<section id="page"> <!-- Defining the #page section with the section tag -->
+
+            <header> <!-- Defining the header section of the page with the appropriate tag -->
+
+                <hgroup>
+					<h1>Incredible !ndia</h1>
+					<h3>Welcome to my Mother land</h3>
+				</hgroup>
+
+                <nav class="clear"> <!-- The nav link semantically marks your main site navigation -->
+                    <ul>
+                        <li><a href="#article1">Home</a></li>
+                        <li><a href="#article2">Taj Mahal</a></li>
+                        <li><a href="#article3">Red Fort</a></li>
+						<li><a href="#article4">Golden Temple</a></li>
+                    </ul>
+                </nav>
+
+            </header>
+
+            <section id="articles"> <!-- A new section with the articles -->
+
+				<!-- Article 1 start -->
+
+                <div class="line"></div>  <!-- Dividing line -->
+
+                <article id="article1"> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->
+                    <h2>Home<a class="go_up" href="#" class="up">&uparrow;</a></h2>
+
+                    <div class="line"></div>
+
+                    <div class="articleBody clear">
+
+                    	<figure> <!-- The figure tag marks data (usually an image) that is part of the article -->
+	                    	<a href="pages/beetle.html"><img src="images/incredible-india.jpg" width="500" height="300"></a>
+                        </figure>
+
+                        <p>Greetings!</p>
+                        <p>India is known for diversity in region, diversity in languages, diversity in food, diversity in clothes, diversity in festival, diversity in states, diversity in everything which uniquely represents country and its people. India is republic country which is for the people, by the people and from the people.</p>
+                        <p>People rule its county, people choose their own leader, and people are independent of doing anything. India is a country where people are changed according to location. Every state has its incredible beauty of heritage as well as nation.<p>
+						<p class="pbold">Click on the image for more information</p>
+                    </div>
+                </article>
+
+				<!-- Article 1 end -->
+
+
+				<!-- Article 2 start -->
+
+                <div class="line"></div>
+
+                <article id="article2">
+                    <h2>Taj Mahal<a class="go_up" href="#" class="up">&uparrow;</a></h2>
+
+                    <div class="line"></div>
+
+                    <div class="articleBody clear">
+                    	<figure>
+	                    	<a href="pages/ghia.html"><img src="images/tajmahal.jpg" width="500" height="300" /></a>
+                        </figure>
+
+                        <p>India has many wonderful monuments of exquisite beauty and great artistic charm. Among these, the greatest and the most fascinating is the monument called Taj Mahal. It can be regarded as a love story written in marble.Rabindranath Tagore called it,"A Dream in Marble".For many others, it is a"poem written in marble" and"symphony in stone". Today, it is reckoned as one of the Seven Wonders of the World.</p>
+                        <p>This great monument built in pure white marble was erected by Shahjahan, the Mughal emperor in memory of his beloved queen Mumtaz Mahal.He had loved her deeply while she was alive and when she died he wanted to perpetuate his eternal love for her by erecting a spectacular tomb.</p>
+						<p class="pbold">Click on the image for more information</p>
+                    </div>
+                </article>
+
+				<!-- Article 2 end -->
+
+				<!-- Article 3 start -->
+
+                <div class="line"></div>
+
+                <article id="article3">
+                    <h2>Red fort<a class="go_up" href="#" class="up">&uparrow;</a></h2>
+
+                    <div class="line"></div>
+
+                    <div class="articleBody clear">
+                    	<figure>
+	                    	<a href="pages/bus.html"><img src="images/redfort.jpg" width="500" height="300" /></a>
+                        </figure>
+
+                        <p>Red Fort is one of the great monuments of the India. It is located in the New Delhi in the centre of the city. Red Fort is the most glorifying among many historical buildings in the capital of the country. It is very famous all through the world. It has become the glory of India and people from many corners of the world come here to have a look. It was built by the Mughal emperor, Shah Jahan in 1648 by the help of skilled architecture of that time. It is built using very long red stones and took approximately nine years in getting completed.</p>
+
+						<p class="pbold">Click on the image for more information</p>
+                    </div>
+                </article>
+
+				<!-- Article 3 end -->
+
+				<!-- Article 4 start -->
+
+                <div class="line"></div>
+
+                <article id="article4">
+                    <h2>Golden temple<a class="go_up" href="#" class="up">&uparrow;</a></h2>
+
+                    <div class="line"></div>
+
+                    <div class="articleBody clear">
+                    	<figure>
+	                    	<a href="pages/thing.html"><img src="images/temple.jpg" width="500" height="300" /></a>
+                        </figure>
+
+                        <p>The Harmandir Sahib and the Darbar Sahib located in the city of Amritsar, Punjab (India) are informally known as the Golden Temple. Built in the 16th Century by Guru Arjan Dev, the golden Temple opens from four gates which symbolises the openness of Sikhism towards all the people and all the religions.
+                        <p>The temple welcomes more than one lakh worshippers on a daily basis. As the name states, the Golden Temple is made up of pure gold thus attracting lakhs of tourists from all around the world. The reflection of the Golden Temple in the pond located in the premises of the Gurudwara under the moonlight acts as one of the major attractions for the tourists.</p>
+                        <p class="pbold">Click on the image for more information</p>
+                    </div>
+                </article>
+
+				<!-- Article 4 end -->
+
+            </section>
+
+        <footer> <!-- Marking the footer section -->
+
+           <div class="line"></div>
+
+           <p>Copyright 2015 - incredibleindia.com</p> <!-- Change the copyright notice -->
+
+        </footer>
+
+		</section> <!-- Closing the #page section -->
+
+    </body>
+</html>
