--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>India</title>
         <link rel="icon" type="image/ico" href="images/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="styles/normalize.css">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
 
     </head>
 
