--- a/default.html
+++ b/default.html
@@ -5,9 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <title>India</title>
-        <link rel="icon" type="image/ico" href="images/favicon.ico">
-		<link rel="stylesheet" type="text/css" href="styles/normalize.css">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="icon" type="image/ico" href="favicon.ico">
+		<link rel="stylesheet" type="text/css" href="normalize.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
 
     </head>
 
@@ -75,7 +75,7 @@
                     <div class="articleBody clear">
                     	<figure>
 
-	                    	<a href="taj.html"><img src="images/tajmahal.jpg" width="500" height="300" /></a>
+	                    	<a href="taj.html"><img src="tajmahal.jpg" width="500" height="300" /></a>
                         </figure>
 
                         <p>India has many wonderful monuments of exquisite beauty and great artistic charm. Among these, the greatest and the most fascinating is the monument called Taj Mahal. It can be regarded as a love story written in marble. Rabindranath Tagore called it,"A Dream in Marble". For many others, it is a"poem written in marble" and "symphony in stone". Today, it is reckoned as one of the Seven Wonders of the World.</p>
@@ -97,7 +97,7 @@
 
                     <div class="articleBody clear">
                     	<figure>
-	                    	<a href="fort.html"><img src="images/redfort.jpg" width="500" height="300" /></a>
+	                    	<a href="fort.html"><img src="redfort.jpg" width="500" height="300" /></a>
                         </figure>
 
                         <p>Red Fort is one of the great monuments of the India. It is located in the New Delhi in the centre of the city. Red Fort is the most glorifying among many historical buildings in the capital of the country. It is very famous all through the world. It has become the glory of India and people from many corners of the world come here to have a look. It was built by the Mughal emperor, Shah Jahan in 1648 by the help of skilled architecture of that time. It is built using very long red stones and took approximately nine years in getting completed.</p>
@@ -119,7 +119,7 @@
 
                     <div class="articleBody clear">
                     	<figure>
-	                    	<a href="temple.html"><img src="images/temple.jpg" width="500" height="300" /></a>
+	                    	<a href="temple.html"><img src="temple.jpg" width="500" height="300" /></a>
 
                         </figure>
 
