--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#article1">Home</a></li>
                         <li><a href="#article2">Taj Mahal</a></li>
                         <li><a href="#article3">Red Fort</a></li>
-						<li><a href="#article4">Golden Temple</a></li>
+			<li><a href="#article4">Golden Temple</a></li>
                     </ul>
                 </nav>
 
@@ -49,7 +49,7 @@
                     <div class="articleBody clear">
 
                     	<figure> <!-- The figure tag marks data (usually an image) that is part of the article -->
-	                    	<a href="india.html"><img src="images/incredible-india.jpg" width="500" height="300"></a>
+	                    	<a href="india.html"><img src="incredible-india.jpg" width="500" height="300"></a>
                         </figure>
 
                         <p>Greetings!</p>
