--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </head>
 
-    <body background="bb.jpg">
+    <body background-image="bb.jpg">
 
     	<section id="page"> <!-- Defining the #page section with the section tag -->
 
