--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="articleBody clear">
 
                     	<figure> <!-- The figure tag marks data (usually an image) that is part of the article -->
-	                    	<a href="india.html"><img src="bb.jpg" width="500" height="300"></a>
+	                    	<a href="india.html"><img src="incredible-india.jpg" width="500" height="300"></a>
                         </figure>
 
                         <p>Greetings!</p>
