--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <title>India</title>
-        <link rel="icon" type="image/ico" href="favicon.ico">
+        <link rel="icon"  href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
         <link rel="stylesheet" type="text/css" href="main.css">
 
