--- a/ajanta.html
+++ b/ajanta.html
@@ -5,18 +5,18 @@
 	Incredible India
 </title>
 	<meta charset="utf-8">
-	<link rel="shortcut icon" href="../Images/favicon.ico">
-	<link rel="stylesheet" href="../Styles/ajanta.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="ajanta.css">
 </head>
 
 <body background="sky1.jpg">
 	<header>
-	<center><img src="../Images/header.png">
+	<center><img src="header.png">
 	</header>
 
 	<nav id="nav_menu">
 			<ul>
-				<li><a href="../index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">Monuments</a>
 				<ul>
 					<li><a href="lotus.html">Lotus Temple</a></li>
@@ -57,18 +57,18 @@
 	<aside>
 				<h3>Historic Monuments</h2>
 				<h4><br><a href="sanchi.html">Sanchi Stupa</a></h4>
-			   <a href="sanchi.html"><img src="../Images/ss.jpg" alt="Sanchi Stupa"></a>
+			   <a href="sanchi.html"><img src="ss.jpg" alt="Sanchi Stupa"></a>
 					<h4><br><a href="qutub.html">Qutab Minar</a></h4>
-					<a href="qutub.html"><img src="../Images/qm.jpg" alt="Qutab Minar"></a>
+					<a href="qutub.html"><img src="qm.jpg" alt="Qutab Minar"></a>
 					<h4><br><a href="#"class="current">Ajanta Caves</a></h4>
-					<a href="ajanta.html"><img src="../Images/ajanta.jpg" alt="Ajanta and Ellora Caves"></a>
+					<a href="ajanta.html"><img src="ajanta.jpg" alt="Ajanta and Ellora Caves"></a>
 					<h4><br><a href="city.html">City Palace</a></h4>
-					<a href="city.html"><img src="../Images/cp.jpg" alt="City Palace"></a>
+					<a href="city.html"><img src="cp.jpg" alt="City Palace"></a>
 		</aside>
 		<aside1>
 					<nav id="nav_list">
 								     <ul>
-								         <li><a href="../index.html" >Home</a></li>
+								         <li><a href="index.html" >Home</a></li>
 								         <li><a href="photos.html">Images</a></li>
 
 								     </ul>
@@ -82,7 +82,7 @@
 		<article>
 
 			<h2>Ajanta Caves</h2>
-			<img src="../Images/ac.jpg">
+			<img src="ac.jpg">
 			<p>The Ajanta Caves in Aurangabad district of Maharashtra state of India are about 30 rock-cut Buddhist cave monuments which date from the 2nd century BCE to about 480 or 650 CE. The caves include paintings and sculptures described by the government Archaeological Survey of India as "the finest surviving examples of Indian art, particularly painting", which are masterpieces of Buddhist religious art, with figures of the Buddha and depictions of the Jataka tales. The caves were built in two phases starting around the 2nd century BCE, with the second group of caves built around 400-650 CE according to older accounts, or all in a brief period of 460 to 480 according to the recent proposals of Walter M. Spink. The site is a protected monument in the care of the Archaeological Survey of India, and since 1983, the Ajanta Caves have been a UNESCO World Heritage Site.</p>
 
 
@@ -95,7 +95,7 @@
 
 	</main>
 	<footer>
-	<center><img src="../Images/footer.jpg">
+	<center><img src="footer.jpg">
 	</footer>
 </body>
 </html>
