--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	Paras Chadha
 </title>
 	<meta charset="utf-8">
-	<link rel="shortcut icon" href="Images/favicon.ico">
-	<link rel="stylesheet" href="Styles/main.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="main.css">
 </head>
  	<header>
-	<center><img src="Images/banner.jpg" alt="banner" style="width:1350px;">
+	<center><img src="banner.jpg" alt="banner" style="width:1350px;">
 	</header>
 <body background="bg1.jpg">
 	<nav id="nav_menu">
@@ -17,9 +17,9 @@
 				<li><a href="index.html" class="current">Home</a></li>
 							<li><a href="#">Education</a>
 							<ul>
-								<li><a href="Pages/lotus.html">Conestoga College</a></li>
-								<li><a href="Pages/victoria.html">D.A.V School</a></li>
-								<li><a href="Pages/hawa.html">St. Joseph's</a></li>
+								<li><a href="Pages/conestoga.html">Conestoga College</a></li>
+								<li><a href="Pages/dav.html">D.A.V School</a></li>
+								<li><a href="Pages/sjcs.html">St. Joseph's</a></li>
 								
 								</li>
 							</ul>
@@ -29,16 +29,16 @@
 							<ul>
 							    <li><a href="#">Dynamic Websites</a>
 								<ul>
-							    	<li><a href="Pages/photos.html">HTML 5</a></li>
-							    	<li><a href="Pages/photos.html">javaScript</a></li>
-							    	<li><a href="Pages/photos.html">Asp.NET</a></li>
+							    	<li><a href="Pages/h5.html">HTML 5</a></li>
+							    	<li><a href="Pages/javaS.html">javaScript</a></li>
+							    	<li><a href="Pages/asp.html">Asp.NET</a></li>
 								</ul>
 							   </li>
 							    <li><a href="#">C#</a>
 								<ul>
-							    	<li><a href="Pages/photos.html">Games</a></li>
-							    	<li><a href="Pages/photos.html">Form Applications</a></li>
-							    	<li><a href="Pages/photos.html">Console Applications</a></li>
+							    	<li><a href="Pages/game.html">Games</a></li>
+							    	<li><a href="Pages/formApp.html">Form Applications</a></li>
+							    	<li><a href="Pages/conApp.html">Console Applications</a></li>
 								</ul>
 							    </ul>
 							</li>
@@ -51,18 +51,18 @@
 </nav>
      <aside>
      				<br><canvas id="canvas" width="48" height="48"></canvas></br>
-					<br><a href="https://www.facebook.com/profile.php?id=100007870276257"><img src="Images/fb.png" alt="Facebook"></a><br>
-					<br><a href="https://twitter.com/paras_chadha"><img src="Images/twitter.png" alt="Twitter"></a></br>
-					<br><a href="https://www.instagram.com/paras.chadha/?hl=en"><img src="Images/insta.png" alt="Instagram"></a></br>
-					<br><a href="mailto:paraschadha3@gmail.com"><img src="Images/email.png" alt="Email"></a></br>
+					<br><a href="https://www.facebook.com/profile.php?id=100007870276257"><img src="fb.png" alt="Facebook"></a><br>
+					<br><a href="https://twitter.com/paras_chadha"><img src="twitter.png" alt="Twitter"></a></br>
+					<br><a href="https://www.instagram.com/paras.chadha/?hl=en"><img src="insta.png" alt="Instagram"></a></br>
+					<br><a href="mailto:paraschadha3@gmail.com"><img src="email.png" alt="Email"></a></br>
 						<!-- <form method="post" action="mailto:paraschadha3@gmail.com"enctype="text/plain" >
 							<input type="Image" src="Images/email.jpg"/>
 						</form> -->
 
 	</aside>
 
-<br><center><img src="Images/slide1.jpg">
-<img src="Images/about_me.png">
+<br><center><img src="slide1.jpg">
+<img src="about_me.png">
 <main>
 <section>
 		<h3>Someting About me</h3>
