--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <img src="about_me.png">
 <main>
 <section>
-		<h3>Someting About me</h3>
+		<h3>Something About Me</h3>
 		<article>
 		<p>I am passionate about to work with IT department and to use my skills to be best of my ability.The combination of my education, as well as experiences, will match the requirement to achieve the desired aim or result. I have been practicing working with Visual Studio, HTML, SQL, OOP and much more. I also bring the experience with MS Office Word and PowerPoint. I know languages like c#, html5, java, javaScript etc.
 		<p>In addition, I bring exceptional communication skills and cheerful interpersonal manner. As I know 3 spoken languages, will definately help increase the work flexibility.
