--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 </nav>
      <aside>
      				<canvas id="canvas" width="48" height="48"></canvas><br>
-					<a href="https://www.facebook.com/profile.php?id=100007870276257"><img src="fb.png" alt="Facebook"></a><br>
-					<a href="https://twitter.com/paras_chadha"><img src="twitter.png" alt="Twitter"></a><br>
-					<a href="https://www.instagram.com/paras.chadha/?hl=en"><img src="insta.png" alt="Instagram"></a><br>
-					<a href="mailto:paraschadha3@gmail.com"><img src="email.png" alt="Email"></a><br>
+					<br><a href="https://www.facebook.com/profile.php?id=100007870276257"><img src="fb.png" alt="Facebook"></a><br>
+					<br><a href="https://twitter.com/paras_chadha"><img src="twitter.png" alt="Twitter"></a><br>
+					<br><a href="https://www.instagram.com/paras.chadha/?hl=en"><img src="insta.png" alt="Instagram"></a><br>
+					<br><a href="mailto:paraschadha3@gmail.com"><img src="email.png" alt="Email"></a><br>
 						<!-- <form method="post" action="mailto:paraschadha3@gmail.com"enctype="text/plain" >
 							<input type="Image" src="Images/email.jpg"/>
 						</form> -->
